--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
-{
-  "name": "client",
+{ "homepage": "https://pabloaza89.github.io/PI-Food-GH",
+  "name": "pi-food-gh",
   "version": "0.1.0",
   "private": true,
   "publishConfig": {
@@ -20,6 +20,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -42,5 +44,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
