--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
         "access": "public"
     },
     "dependencies": {
+        "@emotion/react": "^11.11.1",
+        "@emotion/styled": "^11.11.0",
+        "@mui/material": "^5.14.0",
         "axios": "^1.1.3",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.3",
-        "react-router-dom": "^5.2.0",
+        "react-router-dom": "^6.4.5",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0"
@@ -43,6 +46,8 @@
         ]
     },
     "devDependencies": {
+        "@types/react-dom": "^18.2.7",
+        "@types/react-router-dom": "^5.3.3",
         "gh-pages": "^4.0.0"
     }
 }
