--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@emotion/styled": "^11.11.0",
         "@mui/material": "^5.14.0",
         "axios": "^1.1.3",
+        "jquery": "^3.7.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.3",
@@ -46,6 +47,7 @@
         ]
     },
     "devDependencies": {
+        "@types/jquery": "^3.5.16",
         "@types/react-dom": "^18.2.7",
         "@types/react-router-dom": "^5.3.3",
         "gh-pages": "^4.0.0"
