--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dependencies": {
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/icons-material": "^5.14.1",
         "@mui/joy": "^5.0.0-alpha.87",
         "@mui/material": "^5.14.0",
         "axios": "^1.1.3",
