--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "react-router-dom": "^6.4.5",
         "react-scripts": "4.0.3",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "sweetalert2": "^11.4.8"
     },
     "scripts": {
         "predeploy": "npm run build",
