--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@mui/joy": "^5.0.0-alpha.87",
         "@mui/material": "^5.14.0",
         "axios": "^1.1.3",
+        "html-react-parser": "^4.2.1",
         "jquery": "^3.7.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
