--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "jquery": "^3.7.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-highlight-words": "^0.20.0",
         "react-redux": "^7.2.3",
         "react-router-dom": "^6.4.5",
         "react-scripts": "4.0.3",
