--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@mui/icons-material": "^5.14.1",
         "@mui/joy": "^5.0.0-alpha.87",
         "@mui/material": "^5.14.0",
+        "@react-oauth/google": "^0.11.1",
         "axios": "^1.1.3",
         "jquery": "^3.7.0",
         "react": "^17.0.2",
