--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "access": "public"
     },
     "dependencies": {
+        "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
         "@cloudinary/react": "^1.11.2",
         "@cloudinary/url-gen": "^1.11.2",
         "@emotion/react": "^11.11.1",
