--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@cloudinary/url-gen": "^1.11.2",
         "@emotion/react": "^11.11.1",
         "@emotion/styled": "^11.11.0",
+        "@mui/base": "^5.0.0-beta.23",
         "@mui/icons-material": "^5.14.1",
         "@mui/joy": "^5.0.0-alpha.87",
         "@mui/material": "^5.14.0",
