--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@react-oauth/google": "^0.11.1",
         "axios": "^1.5.0",
         "jquery": "^3.7.0",
+        "ngrok": "^5.0.0-beta.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.3",
